<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.mainmenu.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBase"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_appbar"
        app:collapsedTitleTextColor="@color/colorBase"
        app:contentScrim="@color/colorPrimary"
        app:expandedTitleTextColor="@android:color/transparent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
        app:title="@string/app_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/bangkit"
                app:layout_constraintBottom_toBottomOf="@+id/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.822"
                app:layout_constraintStart_toEndOf="@+id/app_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/purple_500"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/cd_logo"
                android:src="@drawable/coderstory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/welcome"
                android:textColor="@color/colorBase"
                android:textSize="12sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="@+id/app_logo"
                app:layout_constraintTop_toBottomOf="@+id/app_logo" />

            <TextView
                android:id="@+id/tv_welcome_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/Coder"
                android:textColor="@color/colorBase"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_welcome"
                app:layout_constraintStart_toEndOf="@+id/tv_welcome"
                app:layout_constraintTop_toTopOf="@+id/tv_welcome"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="24dp"
                android:text="@string/tag_line"
                android:textColor="@color/colorBase"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_welcome"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:collapseIcon="@drawable/coderstory"
            app:layout_collapseMode="pin" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>




        <LinearLayout
            android:id="@+id/refresh_layout"
            android:layout_width="406dp"
            android:layout_height="716dp"
            android:background="@drawable/bg_content_scroll"
            android:paddingTop="3dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/items_story" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="1dp" />

        </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_stories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/navy"
        app:tint="@color/white"
        android:contentDescription="@string/add_story"
        android:src="@drawable/ic_baseline_camera_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>